--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -3,7 +3,8 @@
   border: none;
   outline: none;
   padding: 10px;
-  width: 150px;
+  width: 175px;
   line-height: 30px;
   margin-bottom: 30px;
+  font-size: 1em;
 }
